# flux-quickshell

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
dev/: compile-shaders.sh
dev/notes/: line-rendering-analysis.md  navier-stokes-ref.md  shader-porting.md
dev/quickshell-test/: shell-2sampler.qml  shell-binding-verify.qml  shell-vertex-test.qml  shell.qml
dev/shader-sandbox/: CMakeLists.txt  compare-main.qml  line-test.qml  main.cpp  main.qml  test_fluid.qml
docs/: api.md  architecture.md  build.md  development.md  pipeline.md
plugin/: CMakeLists.txt  FluidSimEngine.cpp  FluidSimEngine.h  FluidSimItem.cpp  FluidSimItem.h  FluidSimShaders.cpp  FluidSimShaders.h  FluxEngine.cpp  FluxEngine.h  FluxItem.cpp  FluxItem.h  FluxShaders.cpp  FluxShaders.h  test_fluid.qml
plugin/shaders/: adjust_advection.comp  adjust_advection.qsb  advect.comp  advect.qsb  diffuse.comp  diffuse.qsb  display.qsb  display_debug.frag  display_frag.frag  divergence.comp  divergence.qsb  draw_endpoint_fs.frag  draw_endpoint_vs.vert  draw_lines_fs.frag  draw_lines_vs.vert  fullscreen_quad.vert  generate_noise.comp  generate_noise.qsb  inject_noise.comp  inject_noise.qsb  line_update.comp  pass_adjust.frag  pass_advect.frag  pass_advect_rev.frag  pass_diffuse.frag  pass_divergence.frag  pass_inject_noise.frag  pass_noise.frag  pass_pressure.frag  pass_subtract.frag  solid_red.frag  solve_pressure.comp  solve_pressure.qsb  subtract_gradient.comp  subtract_gradient.qsb  test_compute.comp  test_instancing_fs.frag  test_instancing_vs.vert  test_solid.comp
qml/: FluxBackground.qml  FluxSimulation.qml  shaders  shell.qml
shaders/: Makefile
shaders/compiled/: advect_forward.qsb  binding_verify_test.qsb  diffuse.qsb  display_frag.qsb  divergence.qsb  flow_lines.qsb  init_velocity.qsb  line_test.qsb  line_test_frag.qsb  line_test_nosampler.qsb  noise.qsb  passthrough.qsb  pressure.qsb  subtract_gradient.qsb  switch_test.qsb  test_compute.qsb  test_vertex.qsb  test_vertex_frag.qsb  visualize.qsb
shaders/src/: advect_forward.frag  binding_verify_test.frag  diffuse.frag  divergence.frag  flow_lines.frag  init_velocity.frag  line_test.vert  line_test_frag.frag  line_test_nosampler.vert  line_test_simple.vert  noise.frag  passthrough.frag  pressure.frag  subtract_gradient.frag  switch_test.frag  test_vertex.vert  test_vertex_frag.frag  visualize.frag
